# murl

./: LICENSE  PAS_COMPLIANCE.md  PUBLISHING.md  README.md  SETUP_SUMMARY.md  install.sh  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
docs/: agent-mode.md  contributing.md  mcp-servers.md
murl/: __init__.py  auth.py  cli.py  token_store.py  upgrade.py
tests/: __init__.py  mcp_test_server.py  test_auth.py  test_cli.py  test_initialization.py  test_mcp_proxy_integration.py  test_public_server_integration.py
