[build-system]
requires = ["setuptools>=61.0,<77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-curl"
version = "0.2.2"
description = "A curl-like CLI tool for interacting with Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "turlockmike"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "click>=8.0.0",
    "mcp>=1.0.0",
    "exceptiongroup>=1.0.0; python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/turlockmike/murl"
Repository = "https://github.com/turlockmike/murl"
Issues = "https://github.com/turlockmike/murl/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests>=2.31.0",
]

[project.scripts]
murl = "murl.cli:main"

[tool.setuptools]
packages = ["murl"]
